--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,7 @@
+.text-to-small {
+    font-size: 0.9rem;
+}
+
 .baseBlock {
     border: 0px;
     border-radius: 12px;
@@ -8,7 +12,6 @@
 }
 .baseBlock .header-message {
     display: flex;
-    justify-content: space-between;
     margin: 10px 0px 5px 0px;
     padding: 0px;
 }
@@ -17,11 +20,11 @@
     width: 42rem;
     overflow: hidden;
     border: 0px;
-    border-radius: 5px;
+    border-radius: 5px 13px 13px 5px;
     padding: 5px;
     background: rgb(245,245,245);
     background: linear-gradient(0deg, rgba(245,245,245,1) 0%, rgba(218,218,218,1) 100%);
-    margin: 0px 5px 0px 5px;
+    margin: 0px 5px 8px 5px;
     box-shadow: 0 0 2px 2px #e2e2e2;
     display: flex;
     align-items: center;
@@ -38,7 +41,7 @@
     width: 42rem;
     overflow: hidden;
     border: 0px;
-    border-radius: 5px;
+    border-radius: 5px 13px 13px 5px;
     padding: 5px;
     background: rgb(245,245,245);
     background: linear-gradient(0deg, rgba(245,245,245,1) 0%, rgba(218,218,218,1) 100%);
@@ -58,13 +61,20 @@
     margin: 0px 5px 10px 5px;
     box-shadow: 0 0 2px 2px #e2e2e2;
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     font-size: 0.6rem;
     float: right;
 }
 
+.footer-message .delete {
+    float: left;
+}
+.delete span {
+    font-size: 0.5rem;
+}
+
 .body-message {
-    margin: 15px 5px 15px 5px;
+    margin: 25px 5px 15px 5px;
     padding: 12px;
     background: rgb(252, 252, 252);
     border-radius: 7px;
